assign ATLAS_URI

--- a/server/config.env
+++ b/server/config.env
@@ -1,2 +1,2 @@
-mongodb+srv://<s10208233-fma>:<h7vteblY0rLaYCVn>@8233-first-mern-app.b03k7tg.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://<s10208233-fma>:<h7vteblY0rLaYCVn>@8233-first-mern-app.b03k7tg.mongodb.net/?retryWrites=true&w=majority
 PORT=5000
