installed dependencies, rm files

--- a/server/config.env
+++ b/server/config.env
@@ -1,2 +1,2 @@
-ATLAS_URI=mongodb+srv://<ask_repo_owner>:<ask_repo_owner>@8233-first-mern-app.b03k7tg.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://s10208233-fma:Pak8JRK20f8UiazX@8233-first-mern-app.b03k7tg.mongodb.net/?retryWrites=true&w=majority
 PORT=5000
